// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Anchor Component Combined prop variations should render with all props 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="Complete Example" class="btn btn-primary">
				<i class="icon-external"></i> External Link
			</a>
		"
`;

exports[`Anchor Component Combined prop variations should render with all props and blue theme 1`] = `
"
			<a href="https://blue.example.com" target="_blank" rel="noopener noreferrer" title="Blue themed link" class="text-blue-600 hover:text-blue-800 underline">
				🎨 Blue Link
			</a>
		"
`;

exports[`Anchor Component Combined prop variations should render with all props and green theme 1`] = `
"
			<a href="https://green.example.com" target="_blank" rel="noopener noreferrer" title="Green themed link" class="text-green-600 hover:text-green-800 underline">
				🎨 Green Link
			</a>
		"
`;

exports[`Anchor Component Combined prop variations should render with all props and red theme 1`] = `
"
		<a href="https://red.example.com" title="Red themed link" class="text-red-600 hover:text-red-800 underline">
			🎨 Red Link
		</a>
	"
`;

exports[`Anchor Component Combined prop variations should render with all props and rose theme 1`] = `
"
		<a href="https://rose.example.com" title="Rose themed link" class="text-rose-600 hover:text-rose-800 underline">
			🎨 Rose Link
		</a>
	"
`;

exports[`Anchor Component Combined prop variations should render with all props and yellow theme 1`] = `
"
			<a href="https://yellow.example.com" target="_blank" rel="noopener noreferrer" title="Yellow themed link" class="text-yellow-600 hover:text-yellow-800 underline">
				🎨 Yellow Link
			</a>
		"
`;

exports[`Anchor Component Combined prop variations should render with all props using long strings 1`] = `
"
			<a href="https://very-long-domain-name-for-testing-purposes.example.com/with/a/very/long/path/that/might/cause/issues" target="_blank" rel="noopener noreferrer" title="This is a very long string that tests how the component handles extensive text content and ensures that it properly renders without breaking the layout or functionality of the anchor element" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-gradient-to-r from-purple-600 to-indigo-600 hover:from-purple-700 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-200">
				<div class="flex items-center space-x-2"><span class="text-xl">🔗</span><span>This is a very long string that tests how the component handles extensive text content and ensures that it properly renders without breaking the layout or functionality of the anchor element</span></div>
			</a>
		"
`;

exports[`Anchor Component Combined prop variations should render with some required and optional props 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="Example Site" class="">
				Visit Example
			</a>
		"
`;

exports[`Anchor Component Required props only should render with just uri 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="">
				undefined
			</a>
		"
`;

exports[`Anchor Component With children variations should render with HTML children 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="">
				<span class="icon">🚀</span> Launch App
			</a>
		"
`;

exports[`Anchor Component With children variations should render with long children content 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="">
				This is a very long string that tests how the component handles extensive text content and ensures that it properly renders without breaking the layout or functionality of the anchor element
			</a>
		"
`;

exports[`Anchor Component With children variations should render with simple text children 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="">
				Click me!
			</a>
		"
`;

exports[`Anchor Component With className variations should render with blue className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="text-blue-500 bg-blue-100 hover:bg-blue-200">
				undefined
			</a>
		"
`;

exports[`Anchor Component With className variations should render with green className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="text-green-500 bg-green-100 hover:bg-green-200">
				undefined
			</a>
		"
`;

exports[`Anchor Component With className variations should render with long className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-indigo-600 border border-transparent rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
				undefined
			</a>
		"
`;

exports[`Anchor Component With className variations should render with red className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="text-red-500 bg-red-100 hover:bg-red-200">
				undefined
			</a>
		"
`;

exports[`Anchor Component With className variations should render with rose className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="text-rose-500 bg-rose-100 hover:bg-rose-200">
				undefined
			</a>
		"
`;

exports[`Anchor Component With className variations should render with yellow className 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="text-yellow-500 bg-yellow-100 hover:bg-yellow-200">
				undefined
			</a>
		"
`;

exports[`Anchor Component With newWindow variations should render with newWindow explicitly false 1`] = `
"
		<a href="https://example.com" title="" class="">
			undefined
		</a>
	"
`;

exports[`Anchor Component With newWindow variations should render with newWindow explicitly true 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="" class="">
				undefined
			</a>
		"
`;

exports[`Anchor Component With title variations should render with long title 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="This is a very long string that tests how the component handles extensive text content and ensures that it properly renders without breaking the layout or functionality of the anchor element" class="">
				undefined
			</a>
		"
`;

exports[`Anchor Component With title variations should render with short title 1`] = `
"
			<a href="https://example.com" target="_blank" rel="noopener noreferrer" title="Short Title" class="">
				undefined
			</a>
		"
`;
